# active-network-er

./: .coveragerc  .gitignore  .travis.yml  Pipfile  config.py  pyproject.toml  readme.md
doc/: conf.py  model.rst  simulation.rst
docs/: .buildinfo  er.model.html  er.plot.html  genindex.html  graph.html  index.html  model.html  objects.inv  py-modindex.html  search.html  searchindex.js  simulation.html
docs/_modules/: index.html
docs/_modules/er/: plot.html
docs/_modules/er/graph/: generator.html  trajectory.html  utils.html
docs/_modules/er/model/: network.html  walker.html
docs/_modules/er/plot/: mfpt.html
docs/_modules/er/simulation/: simulation.html  trajectory.html
docs/_sources/: er.model.rst.txt  er.plot.rst.txt  graph.rst.txt  index.rst.txt
docsrc/: Makefile  conf.py
er/: __init__.py  utils.py
er/graph/: __init__.py  generator.py  trajectory.py  utils.py
er/model/: __init__.py  network.py  walker.py
er/plot/: __init__.py  graph.py  mfpt.py
er/simulation/: __init__.py  simulation.py  trajectory.py
resources/graphs/: er.graphml  hex.graphml  hex_pbc.graphml  hex_tri.graphml  hex_two_connectivity.graphml
scripts_prsb/: generate_figure_1C_2.py  generate_figure_1D.py  generate_figure_1D_constant_rate.py  generate_figure_3B.py  generate_figure_3C.py  generate_figure_4_movie.py  generate_figure_5.py  generate_figure_6.py  generate_figure_S1.py  generate_figure_S2_S3.py  generate_figure_S4.py
test/: test_graph.py  test_network.py  test_simulation.py  test_utils.py  test_walker.py
test/data/: graph.mat
